// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlayerList /> renders admin user properly 1`] = `
<ForwardRef>
  <Table
    variant="simple"
  >
    <TableCaption>
      Current player count: 
      3
      /
      16
       max
    </TableCaption>
    <ForwardRef>
      <ForwardRef>
        <ForwardRef>
          Ready?
        </ForwardRef>
        <ForwardRef>
          Player
        </ForwardRef>
        <ForwardRef
          isNumeric={true}
        >
          Games won
        </ForwardRef>
        <ForwardRef />
      </ForwardRef>
    </ForwardRef>
    <ForwardRef>
      <ForwardRef
        key="1"
      >
        <ForwardRef
          textAlign="center"
        >
          <Checkbox
            checked={false}
            colorScheme="green"
            onChange={[Function]}
          />
        </ForwardRef>
        <ForwardRef>
          <HStack>
            <span>
              username
            </span>
            <Icon
              as={[Function]}
              boxSize={3}
            />
          </HStack>
        </ForwardRef>
        <ForwardRef
          isNumeric={true}
        >
          0
        </ForwardRef>
        <ForwardRef />
      </ForwardRef>
      <ForwardRef
        key="2"
      >
        <ForwardRef
          textAlign="center"
        >
          <Icon
            as={[Function]}
            color="red.500"
          />
        </ForwardRef>
        <ForwardRef>
          <HStack>
            <span>
              username
            </span>
          </HStack>
        </ForwardRef>
        <ForwardRef
          isNumeric={true}
        >
          0
        </ForwardRef>
        <ForwardRef>
          <IconButton
            aria-label="Kick username from the game"
            icon={<FaRegTrashCan />}
            onClick={[Function]}
            size="small"
          />
        </ForwardRef>
      </ForwardRef>
      <ForwardRef
        key="3"
      >
        <ForwardRef
          textAlign="center"
        >
          <Icon
            as={[Function]}
            color="green.400"
          />
        </ForwardRef>
        <ForwardRef>
          <HStack>
            <span>
              username
            </span>
            <Icon
              as={[Function]}
              boxSize={3}
            />
          </HStack>
        </ForwardRef>
        <ForwardRef
          isNumeric={true}
        >
          3
        </ForwardRef>
        <ForwardRef>
          <IconButton
            aria-label="Kick username from the game"
            icon={<FaRegTrashCan />}
            onClick={[Function]}
            size="small"
          />
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
  </Table>
</ForwardRef>
`;

exports[`<PlayerList /> renders properly with 3 players 1`] = `
<ForwardRef>
  <Table
    variant="simple"
  >
    <TableCaption>
      Current player count: 
      3
      /
      16
       max
    </TableCaption>
    <ForwardRef>
      <ForwardRef>
        <ForwardRef>
          Ready?
        </ForwardRef>
        <ForwardRef>
          Player
        </ForwardRef>
        <ForwardRef
          isNumeric={true}
        >
          Games won
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
    <ForwardRef>
      <ForwardRef
        key="1"
      >
        <ForwardRef
          textAlign="center"
        >
          <Checkbox
            checked={false}
            colorScheme="green"
            onChange={[Function]}
          />
        </ForwardRef>
        <ForwardRef>
          <HStack>
            <span>
              username
            </span>
          </HStack>
        </ForwardRef>
        <ForwardRef
          isNumeric={true}
        >
          0
        </ForwardRef>
      </ForwardRef>
      <ForwardRef
        key="2"
      >
        <ForwardRef
          textAlign="center"
        >
          <Icon
            as={[Function]}
            color="red.500"
          />
        </ForwardRef>
        <ForwardRef>
          <HStack>
            <span>
              username
            </span>
          </HStack>
        </ForwardRef>
        <ForwardRef
          isNumeric={true}
        >
          0
        </ForwardRef>
      </ForwardRef>
      <ForwardRef
        key="3"
      >
        <ForwardRef
          textAlign="center"
        >
          <Icon
            as={[Function]}
            color="green.400"
          />
        </ForwardRef>
        <ForwardRef>
          <HStack>
            <span>
              username
            </span>
            <Icon
              as={[Function]}
              boxSize={3}
            />
          </HStack>
        </ForwardRef>
        <ForwardRef
          isNumeric={true}
        >
          3
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
  </Table>
</ForwardRef>
`;

exports[`<PlayerList /> renders properly without gameInfo 1`] = `
<ForwardRef>
  <Table
    variant="simple"
  >
    <TableCaption>
      Current player count: 
      0
      /
      16
       max
    </TableCaption>
    <ForwardRef>
      <ForwardRef>
        <ForwardRef>
          Ready?
        </ForwardRef>
        <ForwardRef>
          Player
        </ForwardRef>
        <ForwardRef
          isNumeric={true}
        >
          Games won
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
    <ForwardRef />
  </Table>
</ForwardRef>
`;
